Polishing some more!
-dev files moved out
Various polishing work done
Sitemap worked on
Footer links as well
See project notes, #standrews

--- a/about/wardens/index.html
+++ b/about/wardens/index.html
@@ -39,9 +39,7 @@
 
       <!--Start of top information area--><div class="twelve columns" id="top">
         <ul class="nostyle">
-          <li><a href="../../sitemap.html">Sitemap</a></li>
-          <li><a href="../../docs/PewSheet.pdf">Current Pew Sheet</a></li>
-          <li><a href=""><img src="../../images/diocese.png" /></a></li>
+          <li><a href="../../sitemap">Sitemap</a></li>
           <li><a href="../../docs/AEDnotice.pdf"><img src="../../images/aed.jpg" /></a></li>
         </ul>
       </div><!--End of top information area-->
@@ -626,6 +624,24 @@
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
         <p><strong>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</strong></p>
         <a href="http://www.facebook.com/standrewsferring"><img src="../../images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
+
+        <a href=""><img src="../../images/diocese.png" /></a>
+
+        <br />
+
+        <ul style="display:inline-block;">
+          <li><a href="../../">Home</a></li>
+          <li><a href="../../contacts">Contacts</a></li>
+          <li><a href="../../about">Who's Who</a></li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
+          <li><a href="../../about/history">History</li>
+          <li><a href="../../services">Services &amp; Dates</li>
+          <li><a href="../../clubs/#social">Social Life at St. Andrew's</li>
+          <li>Hey</li>
+          <li>Hey</li>
+          <li>Hey</li>
+          <li>Hey</li>
+        </ul>
 
       </div><!--Footer ends-->
 
