--- a/clubs/index.html
+++ b/clubs/index.html
@@ -38,9 +38,7 @@
 
       <!--Start of top information area--><div class="twelve columns" id="top">
         <ul class="nostyle">
-          <li><a href="../sitemap.html">Sitemap</a></li>
-          <li><a href="../docs/PewSheet.pdf">Current Pew Sheet</a></li>
-          <li><a href=""><img src="../images/diocese.png" /></a></li>
+          <li><a href="../sitemap">Sitemap</a></li>
           <li><a href="../docs/AEDnotice.pdf"><img src="../images/aed.jpg" /></a></li>
         </ul>
       </div><!--End of top information area-->
@@ -100,6 +98,8 @@
           <li><a href="#other">Other group contacts</a></li>
         </ul>
 
+        <br /><br /><br /><br />
+
         <a name="social"></a>
 
         <h2>Social Life at St. Andrew's Church</h2>
@@ -119,6 +119,8 @@
         <p><strong><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Click here for our Social Events 2016 PDF</a></strong></p>
 
         <p>For details of specific events, <strong>contact Margaret Metcalf (01903 244420)</strong></p>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
 
         <a name="transport"></a>
 
@@ -278,6 +280,24 @@
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
         <p><strong>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</strong></p>
         <a href="http://www.facebook.com/standrewsferring"><img src="../images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
+
+        <a href=""><img src="../images/diocese.png" /></a>
+
+        <br />
+
+        <ul style="display:inline-block;">
+          <li><a href="../">Home</a></li>
+          <li><a href="../contacts">Contacts</a></li>
+          <li><a href="../about">Who's Who</a></li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
+          <li><a href="../about/history">History</li>
+          <li><a href="../services">Services &amp; Dates</li>
+          <li><a href="../clubs/#social">Social Life at St. Andrew's</li>
+          <li>Hey</li>
+          <li>Hey</li>
+          <li>Hey</li>
+          <li>Hey</li>
+        </ul>
 
       </div><!--Footer ends-->
 
