Started adding images and pages to image gallery
Got as far as WW1 2014

--- a/photos/2016salisbury/index.html
+++ b/photos/2016salisbury/index.html
@@ -1,4 +1,4 @@
-
+    
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Photos Home &mdash; St. Andrew's Photo Gallery &mdash; St. Andrew's Church, Ferring</title>
+  <title>Photo Gallery &mdash; St. Andrew's &mdash; St. Andrew's Church, Ferring</title>
   <meta name="description" content="Photos from over the years at St. Andrew's Church, Ferring!">
   <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, saint, south, st, sussex, west, worthing, village, 1250, advent, christmas, event, harvest, photos, picnic, sunday">
   <meta name="author" content="St. Andrew's Church, Ferring">
@@ -17,13 +17,25 @@
 
   <!-- CSS & JavaScript
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="../css/normalize.css"><!-- reset file do not change -->
-  <link rel="stylesheet" href="../css/skeleton.css"><!-- framework CSS -->
-  <link rel="stylesheet" href="../css/style.css"><!--my additions-->
+  <link rel="stylesheet" href="../../css/normalize.css"><!-- reset file do not change -->
+  <link rel="stylesheet" href="../../css/skeleton.css"><!-- framework CSS -->
+  <link rel="stylesheet" href="../../css/style.css"><!--my additions-->
 
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
-  
+  <link rel='stylesheet' href='../unitegallery/css/unite-gallery.css' type='text/css' />
+
+  <script type='text/javascript' src='../unitegallery/js/unitegallery.min.js'></script>
+  <script type='text/javascript' src='../unitegallery/themes/tilesgrid/ug-theme-tilesgrid.js'></script>
+
+  <script type="text/javascript">
+      jQuery(document).ready(function(){
+        jQuery("#gallery").unitegallery({
+          theme_navigation_type: "arrows",
+        });
+      });
+  </script>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -39,8 +51,8 @@
 
       <!--Start of top information area--><div class="twelve columns" id="top">
         <ul class="nostyle">
-          <li><a href="../sitemap">Sitemap</a></li>
-          <li><a href="../docs/AEDnotice.pdf"><img src="../images/aed.jpg" /></a></li>
+          <li><a href="../../sitemap">Sitemap</a></li>
+          <li><a href="../../docs/AEDnotice.pdf"><img src="../../images/aed.jpg" /></a></li>
         </ul>
       </div><!--End of top information area-->
 
@@ -71,7 +83,7 @@
         </div>
         <!--Navigation links begin #nav--><div class="centre">
           <ul>
-            <li><a href="../">Home</a></li><li><a href="../contacts">Contacts</a></li><li><a href="../about">About Us</a></li><li><a href="../services">Services &amp; Dates</a></li><li><a href="../clubs">Clubs/Activities</a></li><li><a href="../photos">Photos</a></li><li><a href="../stewardship">Stewardship</a></li><li><a href="../links">Links</a></li>
+            <li><a href="../../">Home</a></li><li><a href="../../contacts">Contacts</a></li><li><a href="../../about">About Us</a></li><li><a href="../../services">Services &amp; Dates</a></li><li><a href="../../clubs">Clubs/Activities</a></li><li><a href="../../photos">Photos</a></li><li><a href="../../stewardship">Stewardship</a></li><li><a href="../../links">Links</a></li>
           </ul>
         </div><!--Navigation links end-->
       </div><!--Navigation area ends-->
@@ -85,24 +97,24 @@
         <h3 class="list-title">Albums</h3>
 
         <ul id="sidebarLinks">
-          <li><a href="general">General</a></li>
-          <li><a href="2016salisbury">Salisbury 2016</a></li>
-          <li><a href="2015christmas">Christmas 2015</a></li>
-          <li><a href="2015picnic">Picnic 2015</a></li>
-          <li><a href="2015ferring1250">Ferring 1250</a></li>
-          <li><a href="2014ww1">WW1 Service 2014</a></li>
-          <li><a href="2014christmas">Christmas 2014</a></li>
-          <li><a href="2014harvest">Harvest 2014</a></li>
-          <li><a href="2014easter">Easter 2014</a></li>
-          <li><a href="2013easter">Easter 2013</a></li>
-          <li><a href="2012advent">Advent 2012</a></li>
-          <li><a href="2012animals">Animal Service 2012</a></li>
-          <li><a href="2012flowers">Flower Festival 2012</a></li>
-          <li><a href="2011vicar">Installation as Vicar 2011</a></li>
-          <li><a href="2011entertain">Entertainment 2011</a></li>
-          <li><a href="2010christmas">Christmas Fair 2010</a></li>
-          <li><a href="2010harvest">Harvest 2010</a></li>
-          <li><a href="2010palm">Palm Sunday 2010</a></li>
+          <li><a href="../general">General</a></li>
+          <li><a href="../2016salisbury">Salisbury 2016</a></li>
+          <li><a href="../2015christmas">Christmas 2015</a></li>
+          <li><a href="../2015picnic">Picnic 2015</a></li>
+          <li><a href="../2015ferring1250">Ferring 1250</a></li>
+          <li><a href="../2014ww1">WW1 Service 2014</a></li>
+          <li><a href="../2014christmas">Christmas 2014</a></li>
+          <li><a href="../2014harvest">Harvest 2014</a></li>
+          <li><a href="../2014easter">Easter 2014</a></li>
+          <li><a href="../2013easter">Easter 2013</a></li>
+          <li><a href="../2012advent">Advent 2012</a></li>
+          <li><a href="../2012animals">Animal Service 2012</a></li>
+          <li><a href="../2012flowers">Flower Festival 2012</a></li>
+          <li><a href="../2011vicar">Installation as Vicar 2011</a></li>
+          <li><a href="../2011entertain">Entertainment 2011</a></li>
+          <li><a href="../2010christmas">Christmas Fair 2010</a></li>
+          <li><a href="../2010harvest">Harvest 2010</a></li>
+          <li><a href="../2010palm">Palm Sunday 2010</a></li>
         </ul>
       </div><!--Side navigation/info ends-->
 
@@ -111,6 +123,21 @@
         <h1 class="title">St. Andrew's Photo Gallery</h1>
 
         <p style="text-align: center;">Please select an album on the left to be taken to it.</p>
+
+        <a name="albumtitle"></a>
+
+        <h2 class="title">Salisbury 2016</h2>
+
+        <div id="gallery" style="display:none;">
+
+          <img alt="" src="../../images/gallery/2016salisbury.jpg"
+          data-image="../../images/gallery/2016salisbury.jpg">
+
+
+
+        </div>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
 
       </div><!--Content ends-->
 
@@ -122,20 +149,20 @@
 
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
         <p><strong>&copy; 2016 St. Andrew's Church, Ferring | Designed by Paul Robinson</strong></p>
-        <a href="http://www.facebook.com/standrewsferring"><img src="../images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
+        <a href="http://www.facebook.com/standrewsferring"><img src="../../images/facebook.png" alt="St. Andrew's Church Ferring Facebook" /></a>
 
-        <a href=""><img src="../images/diocese.png" /></a>
+        <a href=""><img src="../../images/diocese.png" /></a>
 
         <br />
 
         <ul style="display:inline-block;">
-          <li><a href="../">Home</a></li>
-          <li><a href="../contacts">Contacts</a></li>
-          <li><a href="../about">Who's Who</a></li>
+          <li><a href="../../">Home</a></li>
+          <li><a href="../../contacts">Contacts</a></li>
+          <li><a href="../../about">Who's Who</a></li>
           <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../about/history">History</li>
-          <li><a href="../services">Services &amp; Dates</li>
-          <li><a href="../clubs/#social">Social Life at St. Andrew's</li>
+          <li><a href="../../about/history">History</li>
+          <li><a href="../../services">Services &amp; Dates</li>
+          <li><a href="../../clubs/#social">Social Life at St. Andrew's</li>
           <li>Hey</li>
           <li>Hey</li>
           <li>Hey</li>
