More image gallery!

--- a/photos/2012advent/index.html
+++ b/photos/2012advent/index.html
@@ -126,24 +126,33 @@
 
         <a name="albumtitle"></a>
 
-        <h2 class="title">World War 1 Commemoration 2014</h2>
+        <h2 class="title">Advent 2012</h2>
 
         <div id="gallery" style="display:none;">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_001.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_001.jpg">
+          <img alt="" src="../../images/gallery/2012advent/advent2012_001.jpg"
+          data-image="../../images/gallery/2012advent/advent2012_001.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_002.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_002.jpg">
+          <img alt="" src="../../images/gallery/2012advent/advent2012_002.jpg"
+          data-image="../../images/gallery/2012advent/advent2012_002.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_003.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_003.jpg">
+          <img alt="" src="../../images/gallery/2012advent/advent2012_003.jpg"
+          data-image="../../images/gallery/2012advent/advent2012_003.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_004.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_004.jpg">
+          <img alt="" src="../../images/gallery/2012advent/advent2012_004.jpg"
+          data-image="../../images/gallery/2012advent/advent2012_004.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_005.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_005.jpg">
+          <img alt="" src="../../images/gallery/2012advent/advent2012_005.gif"
+          data-image="../../images/gallery/2012advent/advent2012_005.gif">
+
+          <img alt="" src="../../images/gallery/2012advent/advent2012_006.gif"
+          data-image="../../images/gallery/2012advent/advent2012_006.gif">
+
+          <img alt="" src="../../images/gallery/2012advent/advent2012_007.gif"
+          data-image="../../images/gallery/2012advent/advent2012_007.gif">
+
+          <img alt="" src="../../images/gallery/2012advent/advent2012_008.jpg"
+          data-image="../../images/gallery/2012advent/advent2012_008.jpg">
 
         </div>
 
