--- a/-dev/kit/photos-2013easter.html
+++ b/-dev/kit/photos-2013easter.html
@@ -126,24 +126,36 @@
 
         <a name="albumtitle"></a>
 
-        <h2 class="title">World War 1 Commemoration 2014</h2>
+        <h2 class="title">Easter 2013</h2>
 
         <div id="gallery" style="display:none;">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_001.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_001.jpg">
+          <img alt="" src="../../images/gallery/2014easter/easter2014_001.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_001.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_002.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_002.jpg">
+          <img alt="" src="../../images/gallery/2014easter/easter2014_002.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_002.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_003.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_003.jpg">
+          <img alt="" src="../../images/gallery/2014easter/easter2014_003.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_003.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_004.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_004.jpg">
+          <img alt="" src="../../images/gallery/2014easter/easter2014_004.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_004.jpg">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_005.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_005.jpg">
+          <img alt="" src="../../images/gallery/2014easter/easter2014_005.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_005.jpg">
+
+          <img alt="" src="../../images/gallery/2014easter/easter2014_006.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_006.jpg">
+
+          <img alt="" src="../../images/gallery/2014easter/easter2014_007.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_007.jpg">
+
+          <img alt="" src="../../images/gallery/2014easter/easter2014_008.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_008.jpg">
+
+          <img alt="" src="../../images/gallery/2014easter/easter2014_009.jpg"
+          data-image="../../images/gallery/2014easter/easter2014_009.jpg">
 
         </div>
 
