--- a/photos/2012animals/index.html
+++ b/photos/2012animals/index.html
@@ -126,24 +126,12 @@
 
         <a name="albumtitle"></a>
 
-        <h2 class="title">World War 1 Commemoration 2014</h2>
+        <h2 class="title">Animal Service 2012</h2>
 
         <div id="gallery" style="display:none;">
 
-          <img alt="" src="../../images/gallery/2014ww1/ww1_001.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_001.jpg">
-
-          <img alt="" src="../../images/gallery/2014ww1/ww1_002.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_002.jpg">
-
-          <img alt="" src="../../images/gallery/2014ww1/ww1_003.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_003.jpg">
-
-          <img alt="" src="../../images/gallery/2014ww1/ww1_004.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_004.jpg">
-
-          <img alt="" src="../../images/gallery/2014ww1/ww1_005.jpg"
-          data-image="../../images/gallery/2014ww1/ww1_005.jpg">
+          <img alt="" src="../../images/gallery/2012animals/animals2012_001.jpg"
+          data-image="../../images/gallery/2012animals/animals2012_001.jpg">
 
         </div>
 
