--- a/photos/2016salisbury/index.html
+++ b/photos/2016salisbury/index.html
@@ -98,6 +98,7 @@
 
         <ul id="sidebarLinks">
           <li><a href="../general">General</a></li>
+          <li><a href="../2016harvest">Harvest 2016</a></li>
           <li><a href="../2016salisbury">Salisbury 2016</a></li>
           <li><a href="../2015christmas">Christmas 2015</a></li>
           <li><a href="../2015picnic">Picnic 2015</a></li>
