Gallery finished & final polishes
Pretty much done, short of anything they want changed after the next
meeting!!

--- a/about/index.html
+++ b/about/index.html
@@ -144,18 +144,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../">Home</a></li>
           <li><a href="../contacts">Contacts</a></li>
           <li><a href="../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../about/history">History</li>
-          <li><a href="../services">Services &amp; Dates</li>
-          <li><a href="../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../about/history">History</a></li>
+          <li><a href="../services">Services &amp; Dates</a></li>
+          <li><a href="../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../clubs/#transport">Church Transport</a></li>
+          <li><a href="../photos">Photo Gallery</a></li>
+          <li><a href="../stewardship">Stewardship</a></li>
+          <li><a href="../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
