--- a/clubs/index.html
+++ b/clubs/index.html
@@ -162,6 +162,8 @@
 
         <a name="seedlings"></a>
 
+        <div class="centre-600"><img src="../images/seedlings.jpg" alt="" class="fluid" /></a></div>
+
         <p><strong>Seedlings</strong>: Seedlings is open to all Mothers/Carers/Grandparents of babies and toddlers in the Ferring and Goring areas only.</p>
 
         <p>We meet every Friday during school term time in the Church Centre for two hours 9.15 – 11.15 a.m., where the children engage in playing and interacting with each other.  A planned and varied craft activity is provided and there is always singing with actions including the use of musical instruments.</p>
@@ -285,18 +287,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../">Home</a></li>
           <li><a href="../contacts">Contacts</a></li>
           <li><a href="../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../about/history">History</li>
-          <li><a href="../services">Services &amp; Dates</li>
-          <li><a href="../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../about/history">History</a></li>
+          <li><a href="../services">Services &amp; Dates</a></li>
+          <li><a href="../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../clubs/#transport">Church Transport</a></li>
+          <li><a href="../photos">Photo Gallery</a></li>
+          <li><a href="../stewardship">Stewardship</a></li>
+          <li><a href="../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
