--- a/photos/2016harvest/index.html
+++ b/photos/2016harvest/index.html
@@ -131,20 +131,32 @@
 
         <div id="gallery" style="display:none;">
 
-          <img alt="" src="../../images/gallery/2010palm/palm2010_001.jpg"
-          data-image="../../images/gallery/2010palm/palm2010_001.jpg">
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_001.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_001.jpg">
 
-          <img alt="" src="../../images/gallery/2010palm/palm2010_002.jpg"
-          data-image="../../images/gallery/2010palm/palm2010_002.jpg">
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_002.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_002.jpg">
 
-          <img alt="" src="../../images/gallery/2010palm/palm2010_003.jpg"
-          data-image="../../images/gallery/2010palm/palm2010_003.jpg">
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_003.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_003.jpg">
 
-          <img alt="" src="../../images/gallery/2010palm/palm2010_004.jpg"
-          data-image="../../images/gallery/2010palm/palm2010_004.jpg">
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_004.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_004.jpg">
 
-          <img alt="" src="../../images/gallery/2010palm/palm2010_005.jpg"
-          data-image="../../images/gallery/2010palm/palm2010_005.jpg">
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_005.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_005.jpg">
+
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_006.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_006.jpg">
+
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_007.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_007.jpg">
+
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_008.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_008.jpg">
+
+          <img alt="" src="../../images/gallery/2016harvest/harvest2016_009.jpg"
+          data-image="../../images/gallery/2016harvest/harvest2016_009.jpg">
 
         </div>
 
@@ -166,18 +178,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../../">Home</a></li>
           <li><a href="../../contacts">Contacts</a></li>
           <li><a href="../../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../../about/history">History</li>
-          <li><a href="../../services">Services &amp; Dates</li>
-          <li><a href="../../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../../about/history">History</a></li>
+          <li><a href="../../services">Services &amp; Dates</a></li>
+          <li><a href="../../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../../clubs/#transport">Church Transport</a></li>
+          <li><a href="../../photos">Photo Gallery</a></li>
+          <li><a href="../../stewardship">Stewardship</a></li>
+          <li><a href="../../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
