--- a/services/index.html
+++ b/services/index.html
@@ -90,6 +90,8 @@
         <thead>
           <tr>
             <th scope="col">Sundays</th>
+            <th scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
           </tr>
         </thead>
         <tbody>
@@ -103,7 +105,7 @@
             <td scope="row">1st Sunday in month</td>
           </tr>
           <tr>
-            <td scope="row"></td>
+            <td scope="row">&nbsp;</td>
             <td scope="row">&amp; Pet Thanksgiving Service</td>
             <!--#pets--><td scope="row">Next: 4th September</td>
           </tr>
@@ -122,6 +124,8 @@
         <thead>
           <tr>
             <th scope="col">Wednesdays</th>
+            <th scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
           </tr>
         </thead>
         <tbody>
@@ -151,18 +155,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../">Home</a></li>
           <li><a href="../contacts">Contacts</a></li>
           <li><a href="../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../about/history">History</li>
-          <li><a href="../services">Services &amp; Dates</li>
-          <li><a href="../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../about/history">History</a></li>
+          <li><a href="../services">Services &amp; Dates</a></li>
+          <li><a href="../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../clubs/#transport">Church Transport</a></li>
+          <li><a href="../photos">Photo Gallery</a></li>
+          <li><a href="../stewardship">Stewardship</a></li>
+          <li><a href="../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
