--- a/about/history/index.html
+++ b/about/history/index.html
@@ -81,8 +81,10 @@
     <!--Row begins--><div class="row">
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
+
+        <h3 class="list-title">About Us</h3>
+
         <ul id="sidebarLinks">
-          <h3 class="title">About Us</h3>
           <li><a href="../">Who's Who</a></li>
           <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where To Find<br />St. Andrew's</a></li>
           <li><a href="#">History</a></li>
@@ -118,8 +120,6 @@
 
         <p>But for more on the history of the church please see <a href="http://www.ferringhistorygroup.co.uk/st-andrews-church-the-first-1250-years/">our page on Ferring History Group</a>.</p>
 
-        </div>
-
       </div><!--Content ends-->
 
     </div><!--Row ends-->
@@ -134,18 +134,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../../">Home</a></li>
           <li><a href="../../contacts">Contacts</a></li>
           <li><a href="../../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../../about/history">History</li>
-          <li><a href="../../services">Services &amp; Dates</li>
-          <li><a href="../../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../../about/history">History</a></li>
+          <li><a href="../../services">Services &amp; Dates</a></li>
+          <li><a href="../../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../../clubs/#transport">Church Transport</a></li>
+          <li><a href="../../photos">Photo Gallery</a></li>
+          <li><a href="../../stewardship">Stewardship</a></li>
+          <li><a href="../../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
