--- a/about/wardens/index.html
+++ b/about/wardens/index.html
@@ -81,8 +81,10 @@
     <!--Row begins--><div class="row">
 
       <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
+
+        <h3 class="list-title">About Us</h3>
+
         <ul id="sidebarLinks">
-          <h3 class="title">About Us</h3>
           <li><a href="../">Who's Who</a></li>
           <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where To Find<br />St. Andrew's</a></li>
           <li><a href="../history">History</a></li>
@@ -613,7 +615,7 @@
 
         <p><strong>With thanks to Paul and Angela Simmons for filling in the blanks.</strong></p>
 
-        </div>
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
 
       </div><!--Content ends-->
 
@@ -629,18 +631,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../../">Home</a></li>
           <li><a href="../../contacts">Contacts</a></li>
           <li><a href="../../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../../about/history">History</li>
-          <li><a href="../../services">Services &amp; Dates</li>
-          <li><a href="../../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../../about/history">History</a></li>
+          <li><a href="../../services">Services &amp; Dates</a></li>
+          <li><a href="../../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../../clubs/#transport">Church Transport</a></li>
+          <li><a href="../../photos">Photo Gallery</a></li>
+          <li><a href="../../stewardship">Stewardship</a></li>
+          <li><a href="../../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
