--- a/photos/index.html
+++ b/photos/index.html
@@ -86,6 +86,7 @@
 
         <ul id="sidebarLinks">
           <li><a href="general">General</a></li>
+          <li><a href="2016harvest">Harvest 2016</a></li>
           <li><a href="2016salisbury">Salisbury 2016</a></li>
           <li><a href="2015christmas">Christmas 2015</a></li>
           <li><a href="2015picnic">Picnic 2015</a></li>
@@ -128,18 +129,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../">Home</a></li>
           <li><a href="../contacts">Contacts</a></li>
           <li><a href="../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../about/history">History</li>
-          <li><a href="../services">Services &amp; Dates</li>
-          <li><a href="../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../about/history">History</a></li>
+          <li><a href="../services">Services &amp; Dates</a></li>
+          <li><a href="../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../clubs/#transport">Church Transport</a></li>
+          <li><a href="../photos">Photo Gallery</a></li>
+          <li><a href="../stewardship">Stewardship</a></li>
+          <li><a href="../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
