--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -112,7 +112,25 @@
         </li>
         <li><a href="../photos">Photos</a>
           <ul>
-            <li><a href="../photos/#">Albums</a></li>
+            <li><a href="../photos/general/">General</a></li>
+            <li><a href="../photos/2016harvest/">Harvest 2016</a></li>
+            <li><a href="../photos/2016salisbury/">Salisbury 2016</a></li>
+            <li><a href="../photos/2015christmas/">Christmas 2015</a></li>
+            <li><a href="../photos/2015picnic/">Picnic 2015</a></li>
+            <li><a href="../photos/2015ferring1250/">Ferring 1250</a></li>
+            <li><a href="../photos/2014ww1/">WW1 Service 2014</a></li>
+            <li><a href="../photos/2014christmas/">Christmas 2014</a></li>
+            <li><a href="../photos/2014harvest/">Harvest 2014</a></li>
+            <li><a href="../photos/2014easter/">Easter 2014</a></li>
+            <li><a href="../photos/2013easter/">Easter 2013</a></li>
+            <li><a href="../photos/2012advent/">Advent 2012</a></li>
+            <li><a href="../photos/2012animals/">Animal Service 2012</a></li>
+            <li><a href="../photos/2012flowers/">Flower Festival 2012</a></li>
+            <li><a href="../photos/2011vicar/">Installation as Vicar 2011</a></li>
+            <li><a href="../photos/2011entertain/">Entertainment 2011</a></li>
+            <li><a href="../photos/2010christmas/">Christmas Fair 2010</a></li>
+            <li><a href="../photos/2010harvest/">Harvest 2010</a></li>
+            <li><a href="../photos/2010palm/">Palm Sunday 2010</a></li>
           </ul>
         </li>
         <li><a href="../stewardship">Stewardship</a></li>
@@ -133,18 +151,19 @@
 
         <br />
 
-        <ul style="display:inline-block;">
+        <ul>
           <li><a href="../">Home</a></li>
           <li><a href="../contacts">Contacts</a></li>
           <li><a href="../about">Who's Who</a></li>
-          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</li>
-          <li><a href="../about/history">History</li>
-          <li><a href="../services">Services &amp; Dates</li>
-          <li><a href="../clubs/#social">Social Life at St. Andrew's</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
-          <li>Hey</li>
+          <li><a href="https://goo.gl/maps/NSJ76SqrDo32">Where to find St. Andrew's</a></li>
+          <li><a href="../about/history">History</a></li>
+          <li><a href="../services">Services &amp; Dates</a></li>
+          <li><a href="../clubs">Clubs &amp; Activities</a></li>
+          <li><a href="../clubs/#social">Social Life at St. Andrew's</a></li>
+          <li><a href="../clubs/#transport">Church Transport</a></li>
+          <li><a href="../photos">Photo Gallery</a></li>
+          <li><a href="../stewardship">Stewardship</a></li>
+          <li><a href="../links">Links</a></li>
         </ul>
 
       </div><!--Footer ends-->
