--- a/photos/general/index.html
+++ b/photos/general/index.html
@@ -102,7 +102,7 @@
           <li><a href="../2016salisbury">Salisbury 2016</a></li>
           <li><a href="../2015christmas">Christmas 2015</a></li>
           <li><a href="../2015picnic">Picnic 2015</a></li>
-          <li><a href="../2015ferring1 250">Ferring 1250</a></li>
+          <li><a href="../2015ferring1250">Ferring 1250</a></li>
           <li><a href="../2014ww1">WW1 Service 2014</a></li>
           <li><a href="../2014christmas">Christmas 2014</a></li>
           <li><a href="../2014harvest">Harvest 2014</a></li>
